2011-12-29 add slim 'read-lock' and 'write-lock',and add LLRU, this is a big deal. (BohuTANG)
2011-12-25 add 'background-merge' thread, Merry christmas. (BohuTANG)
