@@ -1,6 +1,6 @@
 /*
  * nessDB storage engine
- * Copyright (c) 2011, BohuTANG <overred.shuttler at gmail dot com>
+ * Copyright (c) 2011-2012, BohuTANG <overred.shuttler at gmail dot com>
  * All rights reserved.
  * Code is licensed with BSD. See COPYING.BSD file.
  *
